src/objects/Travel_Application__c.object
<CustomObject>
    <description>Employee Travel Application</description>
    <fields>
        <fullName>Airlines_Name__c</fullName>
        <description>Airlines Name</description>
        <label>Airlines Name</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska Airlines</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>American Airlines</fullName>
                </value>
                <value>
                    <fullName>Southwest Airlines</fullName>
                </value>
                <value>
                    <fullName>Spirit Airlines</fullName>
                </value>
                <value>
                    <fullName>United Airlines</fullName>
                </value>
                <value>
                    <fullName>Virgin Airlines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Travel__c</fullName>
        <description>Date of Travel</description>
        <label>Date of Travel</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address_of_Traveler__c</fullName>
        <description>Email Address of Traveler</description>
        <label>Email Address of Traveler</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Traveler__c</fullName>
        <description>Name of the Traveler</description>
        <label>Name of the Traveler</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Travel_From__c</fullName>
        <label>Place of Travel From</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Travel_To__c</fullName>
        <description>Place of Travel To</description>
        <label>Place of Travel To</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Amount__c</fullName>
        <description>Ticket Amount</description>
        <label>Ticket Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traveler_Phone_Number__c</fullName>
        <description>Traveler Phone Number</description>
        <label>Traveler Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Travel Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Airlines_Name__c</columns>
        <columns>Date_of_Travel__c</columns>
        <columns>Email_Address_of_Traveler__c</columns>
        <columns>Name_of_the_Traveler__c</columns>
        <columns>Place_of_Travel_From__c</columns>
        <columns>Place_of_Travel_To__c</columns>
        <columns>Ticket_Amount__c</columns>
        <columns>Traveler_Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{000}</displayFormat>
        <label>Travel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>